Adding styling and background image

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Dog Button</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <br>
     <button id="dog-button">Magic dog button</button>
-    <p>Keep clicking the button. A new dog GIF will be randomly selected each time and will be placed at the top of the page. Older GIFs will scroll further down the page.</p>
+    <p>Cick the button. A new dog GIF will be randomly selected. When you click again, another random dog GIF will be placed at the top while older GIFs will scroll further down the page.</p>
     <hr>
     <div id="images">
     </div>
